// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`injecting with \`propKey\` should match snapshot 1`] = `
<omitProps(TestComponent)
  @flopflip/flags={
    Object {
      "aFeatureToggle": true,
    }
  }
  fooFlagPropName={true}
/>
`;

exports[`injecting without \`propKey\` should match snapshot 1`] = `
<omitProps(TestComponent)
  @flopflip/flags={
    Object {
      "aFeatureToggle": true,
    }
  }
  isFeatureEnabled={true}
/>
`;
